force-app/main/default/objects/Agent_Appointment__c/Agent_Appointment__c.object-meta.xml
<CustomObject>
    <label>Agent Appointment</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Agent Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>