force-app/main/default/objects/Agent_Appointment__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to agent related to agent appointment</description>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agent Appointments</relationshipLabel>
    <relationshipName>AgentAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>