force-app/main/default/objects/Agent_Appointment__c/fields/Delist_Date__c.field-meta.xml
<CustomField>
    <fullName>Delist_Date__c</fullName>
    <label>Delist Date</label>
    <type>Date</type>
</CustomField>