force-app/main/default/objects/Agent_Appointment__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Entity related to the Agent Appointment</description>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QHBPC</fullName>
            </value>
            <value>
                <fullName>QHIC</fullName>
            </value>
            <value>
                <fullName>QHPC</fullName>
            </value>
            <value>
                <fullName>QHS</fullName>
            </value>
            <value>
                <fullName>QHPMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>