force-app/main/default/objects/Agent_Appointment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointed</fullName>
            </value>
            <value>
                <fullName>Delisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>